# mrepo

./: .gitignore  README.rst  pyproject.toml
mrepo/: __init__.py  process.py
scripts/: listrepo.py  selective_copy.py
